Fix gallery spacing and carousel showing when there's only one image

--- a/client/src/components/Monument/Gallery/Gallery.scss
+++ b/client/src/components/Monument/Gallery/Gallery.scss
@@ -1,6 +1,7 @@
 @import "../../../theme";
 
 .images {
+    padding-top: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
